[package]
description = "Created with Anchor"
edition = "2021"
name = "tokenlottery"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenlottery"

[features]
anchor-debug = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.30.1", features = ['init-if-needed']}
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = "4.1.2"
solana-program = "1.18.17"
switchboard-on-demand = "0.1.13"
